--- a/demo.html
+++ b/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?76020317');
-      src: url('./font/fontello.eot?76020317#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?76020317') format('woff'),
-           url('./font/fontello.ttf?76020317') format('truetype'),
-           url('./font/fontello.svg?76020317#fontello') format('svg');
+      src: url('./font/fontello.eot?95436368');
+      src: url('./font/fontello.eot?95436368#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?95436368') format('woff'),
+           url('./font/fontello.ttf?95436368') format('truetype'),
+           url('./font/fontello.svg?95436368#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -312,7 +312,10 @@ body {
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe808"><i class="demo-icon icon-logout">&#xe808;</i> <span class="i-name">icon-logout</span><span class="i-code">0xe808</span></div>
         <div class="the-icons span3" title="Code: 0xe809"><i class="demo-icon icon-search">&#xe809;</i> <span class="i-name">icon-search</span><span class="i-code">0xe809</span></div>
+        <div class="the-icons span3" title="Code: 0xe80a"><i class="demo-icon icon-user">&#xe80a;</i> <span class="i-name">icon-user</span><span class="i-code">0xe80a</span></div>
         <div class="the-icons span3" title="Code: 0xe832"><i class="demo-icon icon-spin3 animate-spin">&#xe832;</i> <span class="i-name">icon-spin3</span><span class="i-code">0xe832</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xf234"><i class="demo-icon icon-user-plus">&#xf234;</i> <span class="i-name">icon-user-plus</span><span class="i-code">0xf234</span></div>
       </div>
     </div>
