--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 	}
 	else
 	{
-		$sql = "SELECT * FROM divy";
+		$sql = "SELECT * FROM panel";
 		
 		if($rezultat = @$polaczenie->query($sql))
 		{
